2011-10-25  Nat Duca  <nduca@chromium.org>

        Unreviewed. Rolled DEPS.

        * DEPS:

2011-10-25  Yury Semikhatsky  <yurys@chromium.org>

        Web Inspector: redesign workers sidebar pane
        https://bugs.webkit.org/show_bug.cgi?id=70815

        Reviewed by Pavel Feldman.

        * src/js/DevTools.js: Expose link to shared workers inspection page to WebCore.
        ():

2011-10-25  Nico Weber  <thakis@chromium.org>

        [chromium] Try to fix mac build after r98294
        https://bugs.webkit.org/show_bug.cgi?id=70753

        Remove test for ScrollAnimatorNone on mac.

        Unreviewed, build fix.

        * WebKit.gypi:

2011-10-24  Geoffrey Garen  <ggaren@apple.com>

        Removed SharedUChar and tightened language around its previous uses
        https://bugs.webkit.org/show_bug.cgi?id=70698

        Reviewed by David Levin.

        - Renamed "threadSafeCopy" and "crossThreadCopy" to "isolatedCopy" because
        the former names gave the dangerous misimpression that the resulting object
        was thread-safe, which is not true.


        * src/WorkerFileSystemCallbacksBridge.cpp:

2011-10-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r98294 and r98306.
        http://trac.webkit.org/changeset/98294
        http://trac.webkit.org/changeset/98306
        https://bugs.webkit.org/show_bug.cgi?id=70790

        the first patch broke chromium-mac and the second gclient
        (Requested by jchaffraix on #webkit).

        * WebKit.gypi:

2011-10-24  Nico Weber  <thakis@chromium.org>

        [chromium] Try to fix mac build after r98294
        https://bugs.webkit.org/show_bug.cgi?id=70785

        Remove test for ScrollAnimatorNone on mac.

        Unreviewed, build fix.

        * WebKit.gypi:

2011-10-24  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r98266.
        http://trac.webkit.org/changeset/98266
        https://bugs.webkit.org/show_bug.cgi?id=70767
